--- a/.env
+++ b/.env
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=cf412d459e472b
-MAIL_PASSWORD=05ec2b6a1f8285
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=med.riadh.khalfallah@gmail.com
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=mrk19933@gmail.com
+MAIL_PASSWORD=whktlksgwknlphzf
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=mrk19933@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
