--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "doctrine/dbal": "^3.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
+        "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.0",
         "spatie/laravel-permission": "^3.17",
         "tymon/jwt-auth": "^1.0.0-rc.5"
